nsg/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "tags": {
            "type": "object",
            "defaultValue": {
                "owner": "luke.fussell@microsoft.com",
                "costCenter": "10512",
                "environment": "Production",
                "application": "Example App"
            },
            "metadata": {
                "description": "Tags to apply to resources"
            }
        }
    },
    "resources": [
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "allow-domain",
            "location": "[resourceGroup().location]",
            "tags": {
                "CostCenter": "[parameters('tags').costCenter]",
                "ResourceOwner": "[parameters('tags').owner]",
                "Environment": "[parameters('tags').environment]",
                "Application": "[parameters('tags').application]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-rpc",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "VirtualNetwork",
                            "protocol": "*",
                            "destinationPortRange": "135",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "allow-smb-overip",
                        "properties": {
                            "priority": 1010,
                            "sourceAddressPrefix": "VirtualNetwork",
                            "protocol": "*",
                            "destinationPortRange": "445",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "allow-ldap",
                        "properties": {
                            "priority": 1020,
                            "sourceAddressPrefix": "VirtualNetwork",
                            "protocol": "*",
                            "destinationPortRange": "389",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "allow-ldap-overssl",
                        "properties": {
                            "priority": 1030,
                            "sourceAddressPrefix": "VirtualNetwork",
                            "protocol": "Tcp",
                            "destinationPortRange": "636",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "allow-gc-ldap",
                        "properties": {
                            "priority": 1040,
                            "sourceAddressPrefix": "VirtualNetwork",
                            "protocol": "Tcp",
                            "destinationPortRange": "3268",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "allow-gc-ldap-overssl",
                        "properties": {
                            "priority": 1050,
                            "sourceAddressPrefix": "VirtualNetwork",
                            "protocol": "Tcp",
                            "destinationPortRange": "3269",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "allow-kerberos",
                        "properties": {
                            "priority": 1060,
                            "sourceAddressPrefix": "VirtualNetwork",
                            "protocol": "*",
                            "destinationPortRange": "88",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "allow-dns",
                        "properties": {
                            "priority": 1070,
                            "sourceAddressPrefix": "VirtualNetwork",
                            "protocol": "*",
                            "destinationPortRange": "53",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "allow-ssh",
            "location": "[resourceGroup().location]",
            "tags": {
                "CostCenter": "[parameters('tags').costCenter]",
                "ResourceOwner": "[parameters('tags').owner]",
                "Environment": "[parameters('tags').environment]",
                "Application": "[parameters('tags').application]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-ssh",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "*",
                            "protocol": "Tcp",
                            "destinationPortRange": "22",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "allow-https",
            "location": "[resourceGroup().location]",
            "tags": {
                "CostCenter": "[parameters('tags').costCenter]",
                "ResourceOwner": "[parameters('tags').owner]",
                "Environment": "[parameters('tags').environment]",
                "Application": "[parameters('tags').application]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-https",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "*",
                            "protocol": "Tcp",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "allow-sqlserver",
            "location": "[resourceGroup().location]",
            "tags": {
                "CostCenter": "[parameters('tags').costCenter]",
                "ResourceOwner": "[parameters('tags').owner]",
                "Environment": "[parameters('tags').environment]",
                "Application": "[parameters('tags').application]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-sqlserver",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "*",
                            "protocol": "Tcp",
                            "destinationPortRange": "1433",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "allow-httphttps",
            "location": "[resourceGroup().location]",
            "tags": {
                "CostCenter": "[parameters('tags').costCenter]",
                "ResourceOwner": "[parameters('tags').owner]",
                "Environment": "[parameters('tags').environment]",
                "Application": "[parameters('tags').application]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-http",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "*",
                            "protocol": "Tcp",
                            "destinationPortRange": "80",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "allow-https",
                        "properties": {
                            "priority": 1010,
                            "sourceAddressPrefix": "*",
                            "protocol": "Tcp",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "allow-rdp",
            "location": "[resourceGroup().location]",
            "tags": {
                "CostCenter": "[parameters('tags').costCenter]",
                "ResourceOwner": "[parameters('tags').owner]",
                "Environment": "[parameters('tags').environment]",
                "Application": "[parameters('tags').application]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "*",
                            "protocol": "Tcp",
                            "destinationPortRange": "3389",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        }
    ],
    "outputs": {}
}
